--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: c
 
 install:
   - sudo apt-get install luarocks
+  - sudo luarocks install moonscript
+  - sudo luarocks install luacrypto
+  - sudo luarocks install luaposix
   - sudo luarocks install busted
   - sudo luarocks make
 
