--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - sudo luarocks install moonscript
   - sudo luarocks install luacrypto
   - sudo luarocks install luaposix
+  - sudo luarocks install https://raw.githubusercontent.com/leafo/lua-date/master/date-dev-1.rockspec
   - sudo luarocks install busted
   - sudo luarocks make
 
