attached server sets the correct lua path/cpath

--- a/spec_openresty/s1/nginx.conf
+++ b/spec_openresty/s1/nginx.conf
@@ -15,12 +15,7 @@ http {
     location / {
       default_type text/html;
       content_by_lua '
-        local lapis = require("lapis")
-        local app = lapis.Application()
-        app:get("/", function()
-          return "Welcome to Lapis " .. require("lapis.version")
-        end)
-        require("lapis").serve(app)
+        require("lapis").serve("app")
       ';
     }
   }
