--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - sudo apt-get install luarocks
   - mkdir -p ~/.luarocks
   - echo 'rocks_servers = { "http://luarocks.org" }' > ~/.luarocks/config.lua
-  - sudo luarocks install https://rocks.moonscript.org/manifests/olivine-labs/busted-2.0.rc7-0.rockspec
+  - sudo luarocks install https://luarocks.org/manifests/olivine-labs/busted-2.0.rc11-0.rockspec
   - sudo luarocks install moonscript
   - sudo luarocks install luacrypto
   - sudo luarocks install luaposix
