try running mysql specs
where are you mysql

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ sudo: false
 addons:
   postgresql: "9.3"
 
+services:
+  - mysql
+
 env:
   global:
     - LUAROCKS=2.2.2
@@ -19,11 +22,16 @@ install:
   - luarocks install moonscript
   - luarocks install luaposix
   - luarocks install date
+  - luarocks install luasql-mysql MYSQL_INCDIR=/usr/include/mysql
   - luarocks make
+
+before_script:
   - createdb -U postgres lapis_test
+  - mysql -e 'create database lapis_test;'
 
 script: 
   - busted
   - busted spec_postgres/
+  - busted spec_mysql/
 
 
