--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - source .travis/setenv_lua.sh
 
 install:
-  - luarocks install https://luarocks.org/manifests/olivine-labs/busted-2.0.rc11-0.rockspec
+  - luarocks install busted
   - luarocks install moonscript
   - luarocks install luaposix
   - luarocks install date
