--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -17,7 +17,6 @@ jobs:
     - uses: leafo/gh-actions-lua@master
       with:
         luaVersion: ${{ matrix.luaVersion }}
-        luaCompileFlags: "-DLUA_COMPAT_5_1"
 
     - uses: leafo/gh-actions-luarocks@v2
 
@@ -25,6 +24,7 @@ jobs:
       run: |
         luarocks install busted
         luarocks install moonscript
+        luarocks install https://raw.githubusercontent.com/leafo/lua-cjson/master/lua-cjson-dev-1.rockspec
         luarocks make
 
     - name: test
