--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -22,6 +22,9 @@ jobs:
 
     - name: build
       run: |
+        curl -O https://github.com/leafo/pgmoon/blob/master/pgmoon-dev-1.rockspec
+        [[ -z $(comm -12  <(echo "5.1";echo "5.2") <(echo "${{ matrix.luaVersion }}")) ]] && sed -i '/luabitop/d' pgmoon-dev-1.rockspec
+        luarocks make pgmoon-dev-1.rockspec
         luarocks install busted
         luarocks install moonscript
         luarocks install https://raw.githubusercontent.com/leafo/lua-cjson/master/lua-cjson-dev-1.rockspec
