--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: build
       run: |
-        curl -O https://github.com/leafo/pgmoon/blob/master/pgmoon-dev-1.rockspec
+        curl -O https://raw.githubusercontent.com/leafo/pgmoon/master/pgmoon-dev-1.rockspec
         [[ -z $(comm -12  <(echo "5.1";echo "5.2") <(echo "${{ matrix.luaVersion }}")) ]] && sed -i '/luabitop/d' pgmoon-dev-1.rockspec
         luarocks make pgmoon-dev-1.rockspec
         luarocks install busted
